// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should handle events on random button 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.emotion-4:hover,
.emotion-4:focus-within {
  color: #4a4f62;
}

.emotion-4>button {
  box-shadow: none!important;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-7 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon emotion-7"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should handle events on toggleable password 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.emotion-4:hover,
.emotion-4:focus-within {
  color: #4a4f62;
}

.emotion-4>button {
  box-shadow: none!important;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-7 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="password"
        type="text"
        value=""
      />
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6"
          title="Hide"
          type="button"
        >
          <svg
            class="sc-ui-icon emotion-7"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-4.emotion-4 {
  overflow: hidden;
}

.emotion-5.emotion-5 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value=""
      />
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly disabled true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        disabled=""
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
        disabled=""
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly error string 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #ef5774;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #ef5774;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
  border-color: #ef5774;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #ef5774;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-4.emotion-4 {
  overflow: hidden;
}

.emotion-5.emotion-5 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        aria-label="Test"
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value="test"
      />
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 2`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-4.emotion-4 {
  overflow: hidden;
}

.emotion-5.emotion-5 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value="test"
      />
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 3`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly multiline true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: initial;
  resize: none;
  padding-top: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-4.emotion-4 {
  overflow: hidden;
}

.emotion-5.emotion-5 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <textarea
        autocomplete="on"
        class="emotion-2 emotion-3"
      />
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly required true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
}

.emotion-6:hover,
.emotion-6:focus-within {
  color: #4a4f62;
}

.emotion-8 {
  fill: #ef5774;
  vertical-align: middle;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.emotion-9 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-9.emotion-9 {
  overflow: hidden;
}

.emotion-10.emotion-10 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        Test
      </label>
      <div
        class="emotion-6 emotion-7"
      >
        <svg
          class="sc-ui-icon emotion-8"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with ariaControls 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        aria-controls="test-control"
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
        id="test-control"
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with basic props 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        id="test"
        placeholder="type..."
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with defaultValue true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with edit true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with fillAvailable true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with generated true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with height prop 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        style="height: 90px;"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with notice 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.emotion-8 {
  color: #b2b6c3;
  font-size: 12px;
  line-height: 20px;
}

.emotion-8.emotion-8 {
  margin-top: 8px;
}

.emotion-9 {
  fill: currentColor;
  vertical-align: top;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9.emotion-9 {
  margin-right: 8px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
    <div
      class="emotion-8"
      role="alert"
    >
      <svg
        class="sc-ui-icon emotion-9"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
      <div>
        Test notice
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with null right component 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  pointer-events: auto;
}

.emotion-6:hover,
.emotion-6:focus-within {
  color: #4a4f62;
}

.emotion-6>button {
  box-shadow: none!important;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
      <div
        class="emotion-6 emotion-7"
      />
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with readOnly true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  background-color: #f6f5f7;
  border-color: #f6f5f7;
  color: #4a4f62;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #b2b6c3;
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        readonly=""
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
        readonly=""
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-6:hover,
.emotion-6:focus-within {
  color: #4a4f62;
}

.emotion-9 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #d4dae7;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.emotion-10.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-11 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-11.emotion-11 {
  overflow: hidden;
}

.emotion-12.emotion-12 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
      <div
        class="emotion-6 emotion-7"
      >
        <hr
          class="emotion-8 emotion-9"
        />
        <p
          class="emotion-10"
        >
          px
        </p>
      </div>
    </div>
    <div
      class="emotion-11"
    >
      <div
        class="emotion-12"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px and required 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-6:hover,
.emotion-6:focus-within {
  color: #4a4f62;
}

.emotion-9 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #d4dae7;
}

.emotion-10 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.emotion-10.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-11 {
  fill: #ef5774;
  vertical-align: middle;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.emotion-11.emotion-11 {
  margin-left: 2px;
}

.emotion-12 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-12.emotion-12 {
  overflow: hidden;
}

.emotion-13.emotion-13 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
      <div
        class="emotion-6 emotion-7"
      >
        <hr
          class="emotion-8 emotion-9"
        />
        <p
          class="emotion-10"
        >
          px
          <svg
            class="sc-ui-icon emotion-11"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </p>
      </div>
    </div>
    <div
      class="emotion-12"
    >
      <div
        class="emotion-13"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid false 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid true 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.emotion-6 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
}

.emotion-6:hover,
.emotion-6:focus-within {
  color: #4a4f62;
}

.emotion-8 {
  fill: #45d6b5;
  vertical-align: middle;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-9 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-9.emotion-9 {
  overflow: hidden;
}

.emotion-10.emotion-10 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
      >
        test
      </label>
      <div
        class="emotion-6 emotion-7"
      >
        <svg
          class="sc-ui-icon emotion-8"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render multiline with props 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: 100%;
  resize: vertical;
  padding-top: 8px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-4.emotion-4 {
  overflow: hidden;
}

.emotion-5.emotion-5 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <textarea
        autocomplete="on"
        class="emotion-2 emotion-3"
        cols="50"
        rows="10"
      />
    </div>
    <div
      class="emotion-4"
    >
      <div
        class="emotion-5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render on focus 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-top: 20px;
  height: initial;
  resize: vertical;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.emotion-6 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-6.emotion-6 {
  overflow: hidden;
}

.emotion-7.emotion-7 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <textarea
        autocomplete="on"
        class="emotion-2 emotion-3"
        cols="50"
        id="test"
        rows="10"
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-7"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.emotion-4:hover,
.emotion-4:focus-within {
  color: #4a4f62;
}

.emotion-4>button {
  box-shadow: none!important;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-7 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="test"
        type="text"
        value=""
      />
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon emotion-7"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 2`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #fafafb;
  border-color: #fafafb;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-4 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #d4dae7;
}

.emotion-6 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.emotion-6:hover,
.emotion-6:focus-within {
  color: #4a4f62;
}

.emotion-6>button {
  box-shadow: none!important;
}

.emotion-8 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
}

.emotion-9 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-10 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-10.emotion-10 {
  overflow: hidden;
}

.emotion-11.emotion-11 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        disabled=""
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="emotion-4 emotion-5"
        disabled=""
      >
        test
      </label>
      <div
        class="emotion-6 emotion-7"
      >
        <button
          class="emotion-8"
          disabled=""
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon emotion-9"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="emotion-10"
    >
      <div
        class="emotion-11"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render toggleable password 1`] = `
<DocumentFragment>
  .emotion-1.emotion-1 {
  position: relative;
}

.emotion-2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.emotion-2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.emotion-2:hover,
.emotion-2:focus {
  border-color: #dbdbdf;
}

.emotion-2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
}

.emotion-2::placeholder {
  opacity: 1;
}

.emotion-4 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.emotion-4:hover,
.emotion-4:focus-within {
  color: #4a4f62;
}

.emotion-4>button {
  box-shadow: none!important;
}

.emotion-6 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
}

.emotion-7 {
  fill: currentColor;
  vertical-align: middle;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.emotion-8 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.emotion-8.emotion-8 {
  overflow: hidden;
}

.emotion-9.emotion-9 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <input
        autocomplete="on"
        class="emotion-2 emotion-3"
        name="password"
        type="password"
        value=""
      />
      <div
        class="emotion-4 emotion-5"
      >
        <button
          class="emotion-6"
          title="Show"
          type="button"
        >
          <svg
            class="sc-ui-icon emotion-7"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-9"
      />
    </div>
  </div>
</DocumentFragment>
`;
